Fix issue where unescaped value breaks in Firefox.

--- a/app/styl/inline-svg.styl
+++ b/app/styl/inline-svg.styl
@@ -1,3 +1,3 @@
 SVG = {
-  play: "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 16'>" + "<polygon fill='#171717' points='0,0 13,8 0,16'></polygon></svg>"
+  play: "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 16'><polygon fill='%23171717' points='0,0 13,8 0,16'></polygon></svg>"
 }
